<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecionePlaneta" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rbMercurio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mercurio" />

        <RadioButton
            android:id="@+id/rbVenus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venus" />

        <RadioButton
            android:id="@+id/rbMarte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marte" />

        <RadioButton
            android:id="@+id/rbJupter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jupter" />

        <RadioButton
            android:id="@+id/rbSaturno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturno" />

        <RadioButton
            android:id="@+id/rbUrano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urano" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edtPeso"
        android:text="@string/peso" />

    <EditText
        android:id="@+id/edtPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="calcular"
        android:text="@string/calcular" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="limpar"
        android:text="@string/limpar" />

</LinearLayout>